Fix social dropdown menu z-index
ERM26009

[4.1.x]

--- a/resources/stylesheets/content/bluespiceSocial.css
+++ b/resources/stylesheets/content/bluespiceSocial.css
@@ -224,6 +224,6 @@ ul.bs-social-entitylist {
 #content .bs-social-entity-content div {
 	padding: 10px;
 }
-#content .bs-social-entity-actions .dropdown {
-	z-index: 499;
+#content .bs-social-entity-actions .dropdown-menu {
+	z-index: 1001;
 }
